# RayLib-Pong

./: .gitignore  Ball.cpp  Ball.h  CMakeLists.txt  GameManager.cpp  GameManager.h  LivesManager.cpp  LivesManager.h  Mini-Pong  Paddle.cpp  Paddle.h  README.md  main.cpp
src/: Ball.cpp  Ball.h  BrickManager.cpp  BrickManager.h  GameManager.cpp  GameManager.h  LivesManager.cpp  LivesManager.h  Paddle.cpp  Paddle.h  PowerUpsManager.cpp  PowerUpsManager.h  main.cpp
src/Bricks/: Brick.cpp  Brick.h  DurableBrick.cpp  DurableBrick.h  IndestructibleBrick.cpp  IndestructibleBrick.h  PowerUpBrick.cpp  PowerUpBrick.h  SpecialBrick.cpp  SpecialBrick.h  StandardBrick.cpp  StandardBrick.h
src/PowerUps/: ExtraLife.cpp  ExtraLife.h  LargerPaddle.cpp  LargerPaddle.h  PowerUp.h  SmallPaddle.cpp  SmallPaddle.h
